help/logicdefinitiongrammar.txt
LogicDefinitionGrammar = { section }
section                = ( `DEVICES' `{' {devrule} `}' ) |
                         ( `CONNECTIONS' `{' {connrule} `}' ) |
                         ( `MONITOR' `{' {monrule} `}' )
devrule                = device `=' uname `;'
connrule               = uname [ `.' outname ] `>' uname `.' inname `;'
monrule                = uname [ `.' outname ] `;'
uname                  = alphachar { alnumchar }
device                 = ( `CLOCK' `-period' uint ) |
                         ( `SWITCH' `-initialvalue' bool ) |
                         ( `AND' `-numinputs' uint ) |
                         ( `NAND' `-numinputs' uint ) |
                         ( `OR' `-numinputs' uint ) |
                         ( `NOR' `-numinputs' uint ) |
                         ( `DTYPE' ) |
                         ( `XOR' )
outname                = `Q' | `QBAR'
inname                 = `I1' | `I2' | `I3' | `I4' |
                         `I5' | `I6' | `I7' | `I8' |
                         `I9' | `I10' | `I11' | `I12' |
                         `I13' | `I14' | `I15' | `I16' |
                         `DATA' |
                         `SET' |
                         `CLEAR' |
                         `CLK'
